# bluetooth_2_usb

./: .coderabbit.yaml  .gitattributes  .gitignore  .pylintrc  .shellcheckrc  .yamllint.yml  AGENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TROUBLESHOOTING.md  bluetooth_2_usb.py  bluetooth_2_usb.service  bluetooth_2_usb.sh  linux_twin_review_prompt.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: PyPI-publish.yml  ci.yml
docs/: cli-service-test.md  device-capture.md  doc-consistency-review-playbook.md  doc-consistency-review.md  host-relay-loopback.md  persistent-readonly.md  pi-cli-service-test-playbook.md  pi-connectivity-recovery-playbook.md  pi-connectivity-troubleshooting.md  pi-host-relay-loopback-test-playbook.md  pi-manual-test-plan.md  pi-remote-wakeup-kernel-playbook.md  release-versioning-policy.md  remote-wakeup-kernel.md  rpi-remote-wakeup-kernel-playbook.md  runtime-architecture.md  testing-strategy.md
docs/pi/: boot-optimization.md  cli-service-test.md  connectivity-recovery.md  connectivity-troubleshooting.md  host-relay-loopback.md  manual-test-plan.md  persistent-readonly.md  remote-wakeup-kernel.md
docs/process/: doc-consistency-review.md
scripts/: bootstrap.sh  capture-device.sh  capture.ps1  capture.sh  check_pi_connectivity.sh  debug.sh  disable_readonly_overlayfs.sh  enable_readonly_overlayfs.sh  host_relay_test_capture.command  host_relay_test_capture.ps1  host_relay_test_capture.sh  inject.sh  install-hid-udev-rule.sh  install.sh  install_host_hidapi_udev_rule.sh  install_host_hidraw_udev_rule.sh  loopback-capture.ps1  loopback-capture.sh  loopback-inject.sh  optimize_pi_boot.sh  pi_relay_test_inject.sh  readonly-disable.sh  readonly-enable.sh  readonly-setup.sh  setup_persistent_bluetooth_state.sh  smoke.sh  smoke_test.sh  smoketest.sh  uninstall.sh  update.sh
scripts/diagnostics/: debug.sh  smoke_test.sh
scripts/host/: check_pi_connectivity.sh  host_relay_test_capture.ps1  host_relay_test_capture.sh  install_host_hidapi_udev_rule.sh
scripts/lib/: bluetooth.sh  boot.sh  common.sh  install.sh  paths.sh  pi_boot_optimize.sh  readonly.sh  report.sh
scripts/maintenance/: optimize_pi_boot.sh
scripts/readonly/: disable_readonly_overlayfs.sh  enable_readonly_overlayfs.sh  setup_persistent_bluetooth_state.sh
scripts/testing/: pi_relay_test_inject.sh
src/bluetooth_2_usb/: __init__.py  args.py  capture_device.py  cli.py  device_classification.py  device_identifier.py  device_relay.py  evdev.py  evdev_compat.py  evdev_ecodes.py  evdev_types.py  extended_consumer_control.py  extended_keyboard.py  extended_mouse.py  gadget_config.py  gadget_manager.py  harness.py  harness_capture.py  harness_capture_windows.py  harness_common.py  harness_inject.py  hid_bounds.py  hid_compat.py  hid_descriptors.py  hid_dispatch.py  hid_gadget_config.py  hid_gadget_layout.py  (+34 more)
tests/: test_args.py  test_bluetooth_ops.py  test_bluetooth_rfkill_lib.py  test_capture_device.py  test_cli.py  test_device_capture.py  test_device_classification.py  test_evdev.py  test_gadget_identity.py  test_gadgets.py  test_harness.py  test_hid.py  test_inputs.py  test_inventory.py  test_logging.py  test_loopback.py  test_loopback_harness.py  test_ops_cli.py  test_ops_commands.py  test_ops_deployment.py  test_ops_diagnostics.py  test_relay.py  test_runtime.py  test_runtime_event_source.py  test_runtime_events.py  test_runtime_integration.py  test_service_config.py  test_service_entrypoint.py  test_service_settings.py  test_test_harness.py  test_udc.py  test_version.py
udev/: 70-bluetooth_2_usb_hidapi.rules  70-bluetooth_2_usb_hidraw.rules
(+79 files in other folders)
