[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bluetooth_2_usb"
dynamic = ["dependencies", "version"]
description = "Bluetooth-to-USB HID bridge for Raspberry Pi. Relay Bluetooth keyboard and mouse input to USB via Linux USB gadget mode."
authors = [
    { name = "quaxalber", email = "pypi@quaxalber.de" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "bluetooth",
    "usb",
    "usb-gadget",
    "usb-hid",
    "hid",
    "raspberry-pi",
    "otg",
    "keyboard",
    "mouse",
    "bluez",
    "evdev",
    "bridge",
    "relay",
    "bios",
    "kvm",
    "kiosk",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Human Interface Device (HID)",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Development Status :: 3 - Alpha", 
]

[project.urls]
Homepage = "https://github.com/quaxalber/bluetooth_2_usb"
Issues = "https://github.com/quaxalber/bluetooth_2_usb/issues"

[project.scripts]
bluetooth_2_usb = "bluetooth_2_usb.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/bluetooth_2_usb/_version.py"
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["F", "I", "B", "UP", "G004"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
